# Music-Instruct-plus-Metrics

./: .env.example  .gitignore  API_ENDPOINTS.md  COLAB_SETUP.md  DEPLOY.md  INSTALL_CLEAN.md  README.md  README_COLAB.md  delivery_cleanup_report.json  hybrid_engine_colab.ipynb  netlify.toml  notebook.ipynb  package-lock.json  package.json  postman_collection.json  pyproject-utf8.toml  pyproject.toml  start.sh  temp_parse.py  test_hf_api.py  testset_metadata.csv  train_colab.py  vercel.json
.claude/: launch.json  settings.local.json
files/: FIX_OOM_CLIPS.md  clip_cutter.py  test_clip_cutter.py
frontend/: app.js  demo.js  index.html  styles.css  styles_demo_additions.css
frontend_integrado_music_metrics/: INTEGRACION_UNIFICADA_PLAN.md  VERIFICACION_NAVEGADOR.md  app.js  index.html  index_react_scaffold_backup.html  styles.css  styles_original_backup.css
results/: benchmark_section.tex  clap_kruskal_dunn.json  clip_level_metrics.csv  comparison_table.csv  comparison_table.md  dataset_section.tex  edit_benchmark_section.tex  edit_data_section.tex  evaluation_system_metrics.csv  passt_kld_stats.json  proposed_metrics_report.csv  proposed_metrics_report.json  resultados_edicion_section.tex  seccion_3_9_benchmark.tex  set_level_metrics.csv
scripts/: README.md  analyze_results.py  build_edit_triplets.py  colab_generate.ipynb  download_mtg_jamendo.py  examples_edits.csv  examples_tracks.csv  export_evaluation_report.py  export_proposed_metrics_report.py  generate_all.py  make_synthetic_results.py  moisesdb_adapter.py  prepare_delivery_cleanup.py  run_edit_benchmark.py  run_training_and_report.sh  sample_testset.py
tests/: test_api_endpoints.py  test_benchmark_analysis.py  test_build_edit_triplets.py  test_captions.py  test_drums_workflow.py  test_edit_benchmark.py  test_features_workflow.py  test_fusion.py  test_generate_all.py  test_generation_render_fusion.py  test_genre_tokens.py  test_manifest.py  (+14 more)
(+337 files in other folders)
